--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "mongoose": "^7.4.3",
     "next": "13.4.9",
     "postcss": "8.4.26",
     "react": "18.2.0",
