--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^2.4.3",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.4.3",
     "next": "13.4.9",
     "postcss": "8.4.26",
@@ -27,6 +28,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.5"
+    "@types/bcryptjs": "^2.4.5",
+    "@types/jsonwebtoken": "^9.0.4"
   }
 }
